# AvaDB

./: .gitignore  meson.build
.github/workflows/: meson.yml
include/avadb/: avadb.h  avainterface.h  avapager.h  avaquery.h  avatree.h  endian.h  packed.h
src/: avadb.c  avapager.c  avaquery.c  avatree.c  meson.build
tests/: meson.build  test_avatree.cpp
